dark mode problem solved

--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ html {
   position: relative;
   width: 40px;
   height: 40px;
-  background-image: url(src/png/crescent-moon\\(1\).png);
+  background-image: url("src/png/crescent-moon\\(1\).png");
   background-size: 50%;
   transition-duration: 0.5s;
   cursor: pointer;
@@ -1774,7 +1774,7 @@ footer {
   }
 }
 
-.many{
+.many {
   margin-top: 50px;
   color: white;
   font-size: 40px;
